objects/L2I_Rule_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>A custom setting for controlling Validation and Workflow Rule conditions</description>
    <fields>
        <fullName>Enforce_Validation_Rule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enforce Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enforce_Workflow_Rule__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enforce Workflow Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execute_Flow__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Execute Flow</label>
        <type>Checkbox</type>
    </fields>
    <label>L2I Rule Settings</label>
</CustomObject>